--- a/download.html
+++ b/download.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <center>
-<img src="MLH.jpg"/><br>
+<img src="MLH2.jpg"/><br>
 <br><form id="downloadForm">
     <label>
         <input type="checkbox" id="agreeCheckbox">
