--- a/download.html
+++ b/download.html
@@ -28,7 +28,9 @@
 </head>
 <body>
 <center>
-<img src="MLH2.jpg"/><br>
+<img src="MLH3.jpg"/><br><br>
+Sponsored by<br>
+<img src="oracle.png"/><br>
 <br><form id="downloadForm">
     <label>
         <input type="checkbox" id="agreeCheckbox">
