--- a/download.html
+++ b/download.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <center>
-<img src="MLH3.jpg"/><br><br>
+<img src="MLH3.png"/><br><br>
 Sponsored by<br>
 <img src="oracle.png"/><br>
 <br><form id="downloadForm">
