--- a/download.html
+++ b/download.html
@@ -27,10 +27,12 @@
     </style>
 </head>
 <body>
-<center>
-<img src="MLH3.png"/><br><br>
+<center><br>
+    <br>
+    <br>
+<img width="800" src="MLH3.png"/><br><br>
 Sponsored by<br>
-<img src="oracle.png"/><br>
+<img  width="600" src="oracle.png"/><br>
 <br><form id="downloadForm">
     <label>
         <input type="checkbox" id="agreeCheckbox">
