--- a/download.html
+++ b/download.html
@@ -30,7 +30,7 @@
 <center><br>
     <br>
     <br>
-<img width="800" src="MLH.png"/><br><br>
+<img width="800" src="MLH.jpg"/><br><br>
 Sponsored by<br>
 <img  width="400" src="oracle.png"/><br>
 <br><form id="downloadForm">
