--- a/downloaddevweek.html
+++ b/downloaddevweek.html
@@ -29,10 +29,8 @@
 <body>
 <center><br>
     <br>
-    <br>
-<img width="800" src="MLH3.png"/><br><br>
-Sponsored by<br>
-<img  width="400" src="oracle.png"/><br>
+    <br><br>
+<img  src="developerweek-text"/><br><br><br
 <br><form id="downloadForm">
     <label>
         <input type="checkbox" id="agreeCheckbox">
