--- a/downloaddevweek.html
+++ b/downloaddevweek.html
@@ -30,7 +30,7 @@
 <center><br>
     <br>
     <br><br>
-<img  src="developerweek-text.png"/><br><br><br
+<img width="800" src="developerweek-text.png"/><br><br><br
 <br><form id="downloadForm">
     <label>
         <input type="checkbox" id="agreeCheckbox">
